--- a/index.html
+++ b/index.html
@@ -158,10 +158,13 @@
 
                 <ul class="team-list none-list">
                     <li class="team-list__item">
-                        <div class="wrapper">
-                            <img src="./img/images/MD.png" alt="Matthew Dix" class="team-pic" width="380" height="470">
-                            <div class="overlay">
+                        <div class="rotate">
+                            <div class="wrapper">
+                                <img src="./img/images/MD.png" alt="Matthew Dix" class="team-pic" width="380"
+                                    height="470">
+                            </div>
 
+                            <div class="overlay">
                                 <ul class="icon-list none-list">
                                     <li class="icon-item">
                                         <a href="http://www.facebook.com" class="link-facebook">
@@ -198,6 +201,8 @@
                                 </ul>
 
                             </div>
+
+
                         </div>
 
                         <h3 class="name team-name">Matthew Dix</h3>
@@ -207,11 +212,13 @@
 
 
                     <li class="team-list__item">
-                        <div class="wrapper">
-                            <img src="./img/images/CC.png" alt="Christoper Campbell" class="team-pic" width="380"
-                                height="470">
-                            <div class="overlay">
+                        <div class="rotate">
+                            <div class="wrapper">
+                                <img src="./img/images/CC.png" alt="Matthew Dix" class="team-pic" width="380"
+                                    height="470">
+                            </div>
 
+                            <div class="overlay">
                                 <ul class="icon-list none-list">
                                     <li class="icon-item">
                                         <a href="http://www.facebook.com" class="link-facebook">
@@ -248,6 +255,8 @@
                                 </ul>
 
                             </div>
+
+
                         </div>
 
                         <h3 class="name team-name">Christoper Campbell</h3>
@@ -255,11 +264,13 @@
                     </li>
 
                     <li class="team-list__item">
-                        <div class="wrapper">
-                            <img src="./img/images/MF.png" alt="Christoper Campbell" class="team-pic" width="380"
-                                height="470">
-                            <div class="overlay">
+                        <div class="rotate">
+                            <div class="wrapper">
+                                <img src="./img/images/MF.png" alt="Matthew Dix" class="team-pic" width="380"
+                                    height="470">
+                            </div>
 
+                            <div class="overlay">
                                 <ul class="icon-list none-list">
                                     <li class="icon-item">
                                         <a href="http://www.facebook.com" class="link-facebook">
@@ -296,6 +307,8 @@
                                 </ul>
 
                             </div>
+
+
                         </div>
                         <h3 class="name team-name">Michael Fertig</h3>
                         <p class="team-text item-text">Developer</p>
